# nft-breeding-on-solana

./: README.md
fullstackproject/: Anchor.toml
fullstackproject/app/: .env  alice.json  package-lock.json  package.json  src.rar  test.json  tsconfig.json
fullstackproject/app/public/: index.html  script.js
fullstackproject/app/src/: index.tsx  style.css
fullstackproject/app/src/assets/: images.ts
fullstackproject/app/src/assets/font/: font.css
fullstackproject/app/src/components/AppBar/: AppBar.tsx  styles.ts
fullstackproject/app/src/components/Button/: Button.tsx  styles.ts
fullstackproject/app/src/components/Card/: Card.tsx  CardBody.tsx  CardFooter.tsx  CardHeader.tsx  styles.ts
fullstackproject/app/src/components/Chart/: DoughnutChart.tsx  LineChart.tsx
fullstackproject/app/src/components/Grid/: GridContainer.tsx  GridItem.tsx
fullstackproject/app/src/contexts/: AppContext.tsx  ThemeContext.tsx  WalletContext.tsx
fullstackproject/app/src/hooks/: useMaxTax.ts  useTaxRate.ts  useWallet.tsx
fullstackproject/app/src/router/: Routes.tsx
fullstackproject/app/src/theme/: index.ts
fullstackproject/app/src/views/: App.tsx
fullstackproject/app/src/views/Breed/: Breed.tsx  (+1 more)
fullstackproject/programs/mysolanaapp/: Cargo.toml
fullstackproject/programs/mysolanaapp/src/: lib.rs
fullstackproject/tests/: mysolanaapp.js
transfer-token-contract/: Anchor.toml  package-lock.json
transfer-token-contract/programs/transfertoken/: Cargo.toml
transfer-token-contract/programs/transfertoken/src/: lib.rs
transfer-token-contract/tests/: transfertoken.js
(+66 files in other folders)
