[package]
name = "mysolanaapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mysolanaapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { path = "./lang" }
anchor-spl = "0.19.0"
solana-program = "1.8.9"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
